# core

./: .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adr-001-heartbeat-prompts.md  quickstart.md
schemas/: event.schema.json
scripts/: init.sh  verify.sh
src/yantraforge/: __init__.py  __main__.py  cli.py
src/yantraforge/events/: __init__.py  hooks.py  logger.py  schema.py
templates/solo-developer/: org.json
templates/solo-developer/prompts/: _preamble.md  academic-researcher.md  backend-engineer.md  cmo.md  coo.md  cto.md  engineering-lead.md  qa-engineer.md  research-lead.md  technical-writer.md
tests/: test_events.py  test_smoke.py
